--- a/maze-game-gui.ui
+++ b/maze-game-gui.ui
@@ -30,7 +30,7 @@
     <property name="geometry">
      <rect>
       <x>320</x>
-      <y>350</y>
+      <y>380</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -48,7 +48,7 @@
     <property name="geometry">
      <rect>
       <x>380</x>
-      <y>380</y>
+      <y>410</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -66,7 +66,7 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>380</y>
+      <y>410</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -84,7 +84,7 @@
     <property name="geometry">
      <rect>
       <x>320</x>
-      <y>410</y>
+      <y>440</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -104,7 +104,7 @@
       <x>0</x>
       <y>0</y>
       <width>700</width>
-      <height>340</height>
+      <height>341</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -382,7 +382,25 @@
      </font>
     </property>
     <property name="text">
-     <string>High Score: 0</string>
+     <string>High Score:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>410</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Current Time: 0:00</string>
     </property>
    </widget>
   </widget>
