--- a/maze-game-gui.ui
+++ b/maze-game-gui.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
+    <width>900</width>
     <height>800</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>700</width>
+    <width>900</width>
     <height>800</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>700</width>
+    <width>900</width>
     <height>800</height>
    </size>
   </property>
@@ -98,12 +98,12 @@
      <string>Down</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QTableWidget" name="maze">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>700</width>
+      <width>900</width>
       <height>341</height>
      </rect>
     </property>
@@ -114,16 +114,19 @@
      </size>
     </property>
     <property name="verticalScrollBarPolicy">
-     <enum>Qt::ScrollBarAlwaysOff</enum>
+     <enum>Qt::ScrollBarAsNeeded</enum>
     </property>
     <property name="horizontalScrollBarPolicy">
-     <enum>Qt::ScrollBarAlwaysOff</enum>
+     <enum>Qt::ScrollBarAsNeeded</enum>
     </property>
     <property name="sizeAdjustPolicy">
      <enum>QAbstractScrollArea::AdjustToContents</enum>
     </property>
     <property name="autoScroll">
      <bool>true</bool>
+    </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="showGrid">
      <bool>true</bool>
@@ -141,7 +144,7 @@
      <bool>false</bool>
     </attribute>
     <attribute name="horizontalHeaderDefaultSectionSize">
-     <number>5</number>
+     <number>2</number>
     </attribute>
     <attribute name="horizontalHeaderMinimumSectionSize">
      <number>5</number>
@@ -150,7 +153,7 @@
      <bool>false</bool>
     </attribute>
     <attribute name="verticalHeaderDefaultSectionSize">
-     <number>5</number>
+     <number>2</number>
     </attribute>
     <attribute name="verticalHeaderHighlightSections">
      <bool>true</bool>
@@ -409,7 +412,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>700</width>
+     <width>900</width>
      <height>18</height>
     </rect>
    </property>
