--- a/maze-game-gui.ui
+++ b/maze-game-gui.ui
@@ -29,8 +29,8 @@
    <widget class="QPushButton" name="UpButton">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>380</y>
+      <x>430</x>
+      <y>660</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -47,8 +47,8 @@
    <widget class="QPushButton" name="RightButton">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>410</y>
+      <x>490</x>
+      <y>690</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -65,8 +65,8 @@
    <widget class="QPushButton" name="LeftButton">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>410</y>
+      <x>370</x>
+      <y>690</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -83,8 +83,8 @@
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>440</y>
+      <x>430</x>
+      <y>720</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -104,7 +104,7 @@
       <x>0</x>
       <y>0</y>
       <width>900</width>
-      <height>341</height>
+      <height>631</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -112,6 +112,11 @@
       <width>16777215</width>
       <height>16777215</height>
      </size>
+    </property>
+    <property name="font">
+     <font>
+      <stylestrategy>PreferAntialias</stylestrategy>
+     </font>
     </property>
     <property name="verticalScrollBarPolicy">
      <enum>Qt::ScrollBarAsNeeded</enum>
@@ -138,13 +143,13 @@
      <number>68</number>
     </property>
     <property name="columnCount">
-     <number>140</number>
+     <number>68</number>
     </property>
     <attribute name="horizontalHeaderVisible">
      <bool>false</bool>
     </attribute>
     <attribute name="horizontalHeaderDefaultSectionSize">
-     <number>2</number>
+     <number>5</number>
     </attribute>
     <attribute name="horizontalHeaderMinimumSectionSize">
      <number>5</number>
@@ -153,7 +158,7 @@
      <bool>false</bool>
     </attribute>
     <attribute name="verticalHeaderDefaultSectionSize">
-     <number>2</number>
+     <number>5</number>
     </attribute>
     <attribute name="verticalHeaderHighlightSections">
      <bool>true</bool>
@@ -297,84 +302,12 @@
     <column/>
     <column/>
     <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>380</y>
+      <x>150</x>
+      <y>660</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -385,14 +318,14 @@
      </font>
     </property>
     <property name="text">
-     <string>High Score:</string>
+     <string>Leaderboard:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>410</y>
+      <x>630</x>
+      <y>660</y>
       <width>151</width>
       <height>31</height>
      </rect>
