--- a/maze-game-gui.ui
+++ b/maze-game-gui.ui
@@ -307,25 +307,28 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>620</y>
+      <y>610</y>
       <width>181</width>
-      <height>31</height>
+      <height>141</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>15</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
      <string>Leaderboard:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
     </property>
    </widget>
    <widget class="QLabel" name="CurrentTime">
     <property name="geometry">
      <rect>
       <x>770</x>
-      <y>620</y>
+      <y>630</y>
       <width>301</width>
       <height>31</height>
      </rect>
