--- a/maze-game-gui.ui
+++ b/maze-game-gui.ui
@@ -29,73 +29,73 @@
    <widget class="QPushButton" name="UpButton">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>530</x>
       <y>620</y>
-      <width>61</width>
+      <width>141</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>UP</string>
+     <string>UP(or Up Key)</string>
     </property>
    </widget>
    <widget class="QPushButton" name="RightButton">
     <property name="geometry">
      <rect>
-      <x>630</x>
+      <x>610</x>
       <y>650</y>
-      <width>61</width>
+      <width>141</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>Right</string>
+     <string>Right(or Right Key)</string>
     </property>
    </widget>
    <widget class="QPushButton" name="LeftButton">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>460</x>
       <y>650</y>
-      <width>61</width>
+      <width>141</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>Left</string>
+     <string>Left(or Left Key)</string>
     </property>
    </widget>
    <widget class="QPushButton" name="DownButton">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>530</x>
       <y>680</y>
-      <width>61</width>
+      <width>141</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>Down</string>
+     <string> Down(or Down Key)</string>
     </property>
    </widget>
    <widget class="QTableWidget" name="maze">
