--- a/maze-game-gui.ui
+++ b/maze-game-gui.ui
@@ -342,6 +342,24 @@
      <string>Current Time: 0</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="NewGame">
+    <property name="geometry">
+     <rect>
+      <x>1010</x>
+      <y>680</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>New Game</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
